- Add GPS Settings Page to Xposed Module

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,6 +8,21 @@
         android:minSdkVersion="19"
         android:targetSdkVersion="19" />
 
+	<permission
+		android:name="com.diycircuits.gpsfake.permission.MAPS_RECEIVE"
+		android:protectionLevel="signature"/>
+	
+	<uses-permission android:name="com.diycircuits.gpsfake.permission.MAPS_RECEIVE"/>
+
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+	<uses-permission android:name="android.permission.INTERNET"/>
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+	<uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
+
+	<uses-feature
+		android:glEsVersion="0x00020000"
+		android:required="true"/>
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -26,7 +41,13 @@
         <meta-data android:value="true" android:name="xposedmodule"/>
         <meta-data android:value="2.0*" android:name="xposedminversion"/>
         <meta-data android:value="GPS Fake" android:name="xposeddescription"/>
-        
+
+		<meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
+
+        <meta-data
+    		android:name="com.google.android.maps.v2.API_KEY"
+    		android:value="AIzaSyB8UySGAYLJ8heiP3znQ9cVU03f0ZBfQl0" />
+		
     </application>
 
 </manifest>
