--- a/project.properties
+++ b/project.properties
@@ -11,4 +11,7 @@
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
+# target=Google Inc.:Google APIs:15
 target=android-19
+# android.library.reference.1=/opt/adt-bundle-linux-x86_64-20131030/sdk/extras/google/google_play_services/libproject/google-play-services_lib/
+android.library.reference.1=../../../../opt/adt-bundle-linux-x86_64-20131030/sdk/extras/google/google_play_services/libproject/google-play-services_lib/
